[package]
name = "crate_name"
version = "0.0.1"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "crate_description"
repository = "https://github.com/LucianoBestia/crate_name"
readme = "README.md"
license = "MIT"
keywords = ["my_keywords"]
categories = ["wasm","web-programming", "games", "https://crates.io/category_slugs"]

publish = false
 --- OR ---
# publish to crates.io only these files
publish = true
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/lib.rs",
]